# CSC271

./: .gitignore  CMakeLists.txt  Notes.txt  main.cpp
Shaders/: depth_fragment.frag  fragment.frag  fragment1.frag  fragment2.frag  skybox_fragment.frag  skybox_vertex.vert  vertex.vert
glad/include/glad/: glad.h
glad/src/: glad.c
include/: mesh.h  shaderprogram.h
src/: mesh.cpp  shaderprogram.cpp
